[project]
name = "lakeshore-zonewriter"
version = "0.1.1"
description = "CLI for reading and writing Lake Shore 336 controller zone tables"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
keywords = [
    "lake-shore",
    "model-336",
    "pyvisa",
    "temperature-controller",
    "zone-table",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.13.3",
    "pyvisa>=1.16.2",
    "questionary>=2.1.1",
]

[project.urls]
Homepage = "https://github.com/kmnhan/lakeshore-zonewriter"
Repository = "https://github.com/kmnhan/lakeshore-zonewriter"
Issues = "https://github.com/kmnhan/lakeshore-zonewriter/issues"

[project.scripts]
lakeshore-zonewriter = "lakeshore_zonewriter.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"
